# rover

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md
desktop-runtime/: Cargo.toml  example_commands.md
desktop-runtime/src/: main.rs
desktop-runtime/src/globals/: credential.rs  macos.rs  object.rs  websocket.rs
desktop-runtime/src/structs/: credential.rs
desktop-runtime/temp-crate-storage/security-framework/: Cargo.toml
desktop-runtime/temp-crate-storage/security-framework-sys/: Cargo.toml
server/: Cargo.toml  Dockerfile  Rocket.toml  backup_file.sql  diesel.toml  start-webservers.sh
server/crates/rust/: Cargo.toml  README.md
server/crates/rust/src/: globals.rs  lib.rs  structs.rs
server/db/diesel/: db.sqlite
server/db/sqlx/: db.sqlite
server/frontend/: .gitignore  next.config.js  package-lock.json  package.json
server/frontend/app/: page.js
server/frontend/public/assets/: green-banner.avif
server/frontend/rover-npm/: README.md  package-lock.json  package.json
server/frontend/rover-npm/src/: device.js  fetcher.js  general.js  index.js  internal.js  lib.js  network.js  process.js  routing.js  user.js
server/frontend/rover-npm/src/json/: permissions.json
server/frontend/rover-npm/src/protocols/: oauth.js
server/frontend/rover-npm/test/: index.js  package-lock.json  package.json
server/frontend/src/: global.js
server/frontend/src/components/: base.js  global.css
server/frontend/src/components/button/image/: button_with_icon.js
server/frontend/src/components/dialogs/: dialog_frame.js
server/frontend/src/components/dialogs/css/: dialog_frame.css
server/frontend/src/components/grids/css/: grid1.css
server/frontend/src/components/home/: home.js
server/frontend/src/components/home/sidebars/: sidebar-section.js  sidebar2.js
server/frontend/src/components/internal_components/device-policies/: policy_sidebar.js
server/frontend/src/components/internal_components/devices/: device_component.js
server/frontend/src/components/internal_components/network-traffic/: network_traffic_component.js
server/frontend/src/components/login/forms/: login_with.js
server/frontend/src/components/tip/: no_results.js
server/frontend/src/components/topbar/: topbar_actions_button.js
server/frontend/src/components/user/: profile_pic.js
server/frontend/src/pages/: home.js  network.js
server/frontend/src/pages/device/: [id].js  index.js
server/frontend/src/pages/devices/: index.js
server/frontend/src/pages/process/: index.js
server/frontend/src/pages/processes/: index.js
server/frontend/src/pages/settings/: customization.js  index.js
server/frontend/src/pages/user/: [id].js  index.js
server/frontend/src/pages/users/: index.js
server/frontend/src/styles/: global.css
server/frontend/styles/: global.css
server/guard/: Rocket.toml  guard-config.toml
server/nginx/config/: split.conf
server/src/: database.rs  device.rs  diesel_mysql.rs  global.rs  main copy.rs  main.rs  responses.rs  structs.rs  tables.rs
server/src/endpoint/: device.rs  network.rs  process.rs  user.rs
server/src/globals/: environment_variables.rs
server/src/websocket/: connection.rs
(+59 files in other folders)
