[package]
name = "rover-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { features = ["json"] }
diesel = { version = "2", features = ["returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"
rand = "0.8.5"
serde = "1.0.196"
hades_auth = { version = "0.1.3", path = "crates/rust" }
url = "2.5.0"
hex-literal = "0.4.1"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
features = ["sqlx_sqlite", "diesel_mysql"]

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool", "sqlite_pool"]
