[package]
name = "rover-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.117"
hades_auth = "0.1.5"
url = "2.5.0"
hex-literal = "0.4.1"
lettre = "0.11.7"
regex = "1.10.5"
once_cell = "1.19.0"
toml = "0.8.14"
diesel = { version = "2.2.3", features = ["mysql", "r2d2"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio = "1.40.0"
futures-util = "0.3.30"
